--- a/noteapp/ios/Runner/Info.plist
+++ b/noteapp/ios/Runner/Info.plist
@@ -14,6 +14,12 @@
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>used to demonstraig photo plugin</string>
+	<key>NSCameraUsageDescription</key>
+	<string>used to demonstraig photo plugin</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>used to demonstraig photo plugin</string>
 	<key>CFBundleName</key>
 	<string>noteapp</string>
 	<key>CFBundlePackageType</key>
