--- a/noteapp/pubspec.yaml
+++ b/noteapp/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   firebase_auth: ^4.16.0
   cloud_firestore: ^4.14.0
   webview_flutter: ^4.8.0
+  image_picker: ^1.1.2
+  firebase_storage: ^11.6.0
 
 dev_dependencies:
   flutter_test:
